--- a/style.css
+++ b/style.css
@@ -27,8 +27,15 @@ p{
     font-weight: 100;
 }
 
+a{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 300;
+    color: #000;
+}
+
 .bigger-font{
-    font-weight: 100;
+    font-weight: 300;
     font-size: 1.6em;
 }
 
@@ -43,8 +50,8 @@ p{
 }
 
 .spacing{
-    margin-top: 8%;
-    margin-bottom: 8%; 
+    margin-top: 7%;
+    margin-bottom: 7%; 
 }
 
 .line-spacing{
@@ -137,6 +144,17 @@ p{
     padding: 30px;
 }
 
+.black-layer{
+    background-color: black;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+}
+
 .white-background{
     background: #fff;
     color:#000;
@@ -145,6 +163,32 @@ p{
 .black-background{
     background: #000;
     color: #fff;
+}
+
+.blue-button{
+    background: #0070cc;
+    color: #fff;
+    outline: none;
+    border: none;
+    padding: 10px 25px;
+    margin: 0px 2px 0px 0px;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
+.red-button{
+    background: #cd3d0f;
+    color: #fff;
+    outline: none;
+    border: none;
+    padding: 10px 25px;
+    margin: 0px 2px 0px 0px;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
+.display-inline{
+    display: inline-block;
 }
 
 #nav-bar{
@@ -156,8 +200,8 @@ p{
     justify-content: space-between;
     align-items: center;
     height: 50px;
-    background: #fff;
     z-index:999;
+    background: #fff;
 }
 
 #header-img{
@@ -176,52 +220,82 @@ p{
     margin: 0px 5px;
 }
 
-a{
-    text-decoration: none;
-    color: #000;
-    text-transform: uppercase;
-}
 
 #intro{
-    background: #000;
     width: 100%;
-    height: 450px;
-    padding-top: 20px;
+    height: 400px;
+    padding-top: 40px;
     margin-bottom: 200px;
     display: flex;
     justify-content: space-around;
 }
 
+#video{
+    position: absolute;
+    width: 100%;
+    height: 575px;
+    margin: 0;
+    padding: 0;
+    z-index: -3;
+    left: 0;
+    top: 0;
+    overflow: hidden;
+    background-color: black;
+    opacity: 1;
+}
+
+#video video{
+    position: absolute;
+    min-height: 100%;
+    min-width: 100%;
+    top: 50px;
+    left: 0;
+    bottom: 0;
+    z-index: -4;
+}
+
+
 #intro-image{
-    width: 75%;
+    width: 60%;
     display: flex;
     justify-content: center;
+    margin-top: 90px;
 }
 
 #intro-image img{
-    margin-top: 25px;
     width: 500px;
     height: 500px;
 }
 
 #intro-description{
-    width: 50%;
+    width: 35%;
+    margin: 460px 5% 0 5%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: flex-start;
     color: #fff;
 }
+
+#intro-description img{
+    width: 350px;
+    height: 150px;
+}
+
+#intro-description p{
+    line-height: 1.5em;
+}
+
 
 #intro-2{
     color: #000;
     text-align: center;
-    margin-top: 20%;
+    margin-top: 30%;
     margin-bottom: 20%; 
 }
 
 #intro-2 img{
-    width: 90%;
+    width: 100%;
 }
 
 #features-main{
