--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ a{
 
 .black-layer{
     background-color: black;
-    opacity: 0.6;
+    opacity: 0.4;
     position: absolute;
     top: 0;
     left: 0;
@@ -190,6 +190,31 @@ a{
 .display-inline{
     display: inline-block;
 }
+
+.two-column-container{
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0px 10px 0px;
+}
+
+.column{
+    width: 50%;
+}
+
+.form-dropdown{
+    padding: 10px 7px 10px 7px;
+    font-size: 1.1em;
+}
+
+.dob-column{
+    width: 30%;
+    
+}
+
+.dob-middle-column{
+    margin: 0px 20px 0px 25px;
+}
+
 
 #nav-bar{
     margin: 0;
@@ -331,6 +356,92 @@ a{
     background: url("./images/games-02.jpeg") center center no-repeat;
     background-size: cover;
 }
+
+#newsletter{
+    color: #000;
+}
+
+#newsletter div{
+    position: absolute;
+    text-align: center;
+    width: 28%;
+    color: #fff;
+    top: 23%;
+    left: 4%;
+}
+
+#newsletter h1{
+    font-size: 2.1em;
+}
+
+#newsletter p{
+    font-size: 1.3em;
+}
+
+#newsletter img{
+    z-index: -1;
+    height: 600px;
+}
+
+#form{
+    background-color: #eee;
+    color: #000;
+    width: 100%;
+    margin: 0;
+    padding: 60px 0px 60px 0px;
+    font-family: 'Raleway'
+}
+
+#form h1{
+    text-align: center;
+}
+
+#form p{
+    text-align: center;
+}
+
+#form label{
+    display: block;
+    margin: 17px 0px 17px 0px;
+}
+
+#form input[type = "text"], input[type = "email"]{
+    width: 90%;
+    padding: 10px 7px 10px 7px;
+    font-size: 1.1em;
+}
+
+#form input[type = "radio"]{
+    height: 25px;
+    width: 25px;
+}
+
+#form input, select {
+    border: none;
+}
+
+#form-button{
+    display: flex;
+    justify-content: center;
+    margin: 50px 0px 50px 0px;
+}
+
+#country{
+    width: 92.5%;
+    font-size: 1.1em;
+}
+
+#dob-container{
+    display: block;
+    width: 100%;
+}
+
+
+
+
+
+
+
 
 
 
