--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ a{
     color: #000;
 }
 
+#mobile-access{
+    margin-right: 20px;
+    display: block;
+    cursor: pointer;
+}
+
 .bigger-font{
     font-weight: 300;
     font-size: 1.6em;
@@ -215,6 +221,21 @@ a{
     margin: 0px 20px 0px 25px;
 }
 
+.nav-show{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 67%;
+    background-color: #fff;
+    width: 100%;
+    list-style: none;
+}
+
+nav ul li{
+    padding: 20px 0px 20px 0px;
+}
+
 
 #nav-bar{
     margin: 0;
@@ -235,14 +256,8 @@ a{
     margin: 0px 20px;
 }
 
-#nav-links{
-    display: flex;
-    padding:  0px 20px;
-    list-style: none;
-}
-
-#nav-links li{
-    margin: 0px 5px;
+nav ul{
+    display: none;
 }
 
 
@@ -288,8 +303,8 @@ a{
 }
 
 #intro-image img{
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
 }
 
 #intro-description{
@@ -303,8 +318,8 @@ a{
 }
 
 #intro-description img{
-    width: 350px;
-    height: 150px;
+    width: 250px;
+    height: 100px;
 }
 
 #intro-description p{
@@ -435,6 +450,51 @@ a{
     display: block;
     width: 100%;
 }
+
+#footer{
+    background-color:  #0070cc;
+    height: 150px;
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.footer-column-1{
+    width: 60%;
+}
+
+.footer-column-2{
+    width: 30%;
+}
+
+@media only screen and (min-width: 800px){
+    
+    nav ul{
+        display: flex;
+        padding:  0px 20px;
+        list-style: none;
+    }
+
+    nav ul li{
+        margin: 0px 5px;
+    }
+
+    #mobile-access{
+        display: none;
+    }
+
+
+    #intro-image img{
+        width: 500px;
+        height: 500px;
+    }
+
+    #intro-description img{
+        width: 350px;
+        height: 150px;
+    }
+} 
 
 
 
